Changed package description

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "com.holygoe.youinject",
+  "name": "com.youinject.youinject",
   "version": "0.1.2",
   "displayName": "You Inject",
   "description": "Dependency Injection Library for Unity Game Engine",
-  "unity": "2021.2",
-  "unityRelease": "10f1",
+  "unity": "2021.3",
+  "unityRelease": "0f1",
   "documentationUrl": "",
   "changelogUrl": "",
   "licensesUrl": "https://github.com/Holygoe/YouInject/blob/main/LICENSE",
