Add the root namespace InjectReady

--- a/Runtime/InjectReady.YouInject.asmdef
+++ b/Runtime/InjectReady.YouInject.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "YouInject",
-    "rootNamespace": "YouInject",
+    "rootNamespace": "InjectReady.YouInject",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
